--- a/drum-machine/package.json
+++ b/drum-machine/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://karanpatel1005.github.io/FCC-Projects/drum-machine",
   "name": "drum-machine",
   "version": "0.1.0",
   "private": true,
