--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /simple-react-markdown-previewer/node_modules
 /drum-machine/node_modules
 /react-calculator/node_modules
+/stop-clock/node_modules
 /.pnp
 .pnp.js
 
